fixed css to be responsive - .container vertical alignment to baseline (top)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -56,7 +56,7 @@ a:hover {
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   max-width: 80rem;
   margin: 0 auto;
   padding: 2rem;
